--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "dev": "nodemon app.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -13,6 +13,7 @@
     "express-ws": "^5.0.2",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jsrsasign": "^11.1.0",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
