--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node ./bin/www",
     "dev": "nodemon app.js",
-    "py": "nodemon ./python/server.py"
+    "py": "nodemon ./python/server.py",
+    "bot": "nodemon ./python/server.py"
   },
   "dependencies": {
     "amazon-chime-sdk-js": "^3.22.0",
